clang/test/BSC/Negative/Trait/GenericTrait/partitially_define/partitially_define.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait T; // expected-error {{invalid syntax, semi not expected after '_Trait T'}}
_Impl _Trait T for int; // expected-error {{unexpected token for ImplTraitDecl}}

_Trait T*; // expected-error {{expected identifier or '('}}
_Impl _Trait T for int; // expected-error {{unexpected token for ImplTraitDecl}}